...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('author-works-page'),
      appBar: AppBar(
        title: Text(widget.author),
        actions: [
          ListenableBuilder(
            listenable: widget.favorites,
            builder: (context, _) {
...
